# Kai

./: Cargo.toml  README.md
UI/: index.html
UI/src/: App.tsx
UI/src/components/: ConnectionLine.tsx  CreateProjectModal.tsx  Dashboard.tsx  NodePalette.tsx  NodePropertiesPanel.tsx  ProjectCard.tsx  WorkflowBuilder.tsx  WorkflowNode.tsx
UI/src/types/: index.ts
databases/: Cargo.toml  databases.toml  doc.md
databases/src/: config.rs  engine.rs  main.rs  mongo.rs  msql.rs  postgres.rs  redis.rs
db_manager/: Cargo.toml
llm_apis/: Cargo.toml
src/: app.rs  commands.rs  events.rs  main.rs
src/collectors/: disk.rs  memory.rs  mod.rs  procfs.rs
src/ui/: disk.rs  memory.rs
