[package]
name = "databases"
version = "0.1.0"
edition = "2025"

[dependencies]
tokio      = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx       = { version = "0.7", features = [
                "postgres",
                "mssql",
                "runtime-tokio-native-tls"
              ] }
mongodb    = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
redis      = { version = "0.25", features = ["tokio-comp"] }
async-trait = "0.1"
dotenvy    = "0.15"
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"
anyhow     = "1"
