[package]
name = "llm_apis"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tokio        = { version = "1", features = ["rt-multi-thread", "macros"] }

# DB erişimi (örn. SQLite veya Postgres)
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "macros",
  "sqlite",     # veya "postgres"
  "json"
] }
